--- a/src/BingChat/BingChat.csproj
+++ b/src/BingChat/BingChat.csproj
@@ -15,7 +15,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Websocket.Client" Version="4.4.43" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
+      <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
