--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.x.x
+          dotnet-version: |
+            6.0.x
+            7.0.x
 
       - name: Publish NuGet package
         uses: alirezanet/publish-nuget@v3.0.4
